--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,4 @@
+# remap prefix from ctrl-b to ctrl-a
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
@@ -5,4 +6,13 @@ bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
+
+# reload config with r
 bind r source-file ~/.tmux.conf
+
+# switch panes using alt + standard vim movement cmd
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
+
